; ModuleID = '/home/carl/AnghaBench/git/extr_apply.c_create_file.c'
source_filename = "/home/carl/AnghaBench/git/extr_apply.c_create_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.apply_state = type { i64 }
%struct.patch = type { i8*, i32, i64, i8*, i64 }

@S_IFREG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.apply_state*, %struct.patch*)* @create_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @create_file(%struct.apply_state* %0, %struct.patch* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.apply_state*, align 8
  %5 = alloca %struct.patch*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  store %struct.apply_state* %0, %struct.apply_state** %4, align 8
  store %struct.patch* %1, %struct.patch** %5, align 8
  %10 = load %struct.patch*, %struct.patch** %5, align 8
  %11 = getelementptr inbounds %struct.patch, %struct.patch* %10, i32 0, i32 0
  %12 = load i8*, i8** %11, align 8
  store i8* %12, i8** %6, align 8
  %13 = load %struct.patch*, %struct.patch** %5, align 8
  %14 = getelementptr inbounds %struct.patch, %struct.patch* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  store i32 %15, i32* %7, align 4
  %16 = load %struct.patch*, %struct.patch** %5, align 8
  %17 = getelementptr inbounds %struct.patch, %struct.patch* %16, i32 0, i32 2
  %18 = load i64, i64* %17, align 8
  store i64 %18, i64* %8, align 8
  %19 = load %struct.patch*, %struct.patch** %5, align 8
  %20 = getelementptr inbounds %struct.patch, %struct.patch* %19, i32 0, i32 3
  %21 = load i8*, i8** %20, align 8
  store i8* %21, i8** %9, align 8
  %22 = load i32, i32* %7, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %27, label %24

24:                                               ; preds = %2
  %25 = load i32, i32* @S_IFREG, align 4
  %26 = or i32 %25, 420
  store i32 %26, i32* %7, align 4
  br label %27

27:                                               ; preds = %24, %2
  %28 = load %struct.apply_state*, %struct.apply_state** %4, align 8
  %29 = load i8*, i8** %6, align 8
  %30 = load i32, i32* %7, align 4
  %31 = load i8*, i8** %9, align 8
  %32 = load i64, i64* %8, align 8
  %33 = call i64 @create_one_file(%struct.apply_state* %28, i8* %29, i32 %30, i8* %31, i64 %32)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %36

35:                                               ; preds = %27
  store i32 -1, i32* %3, align 4
  br label %59

36:                                               ; preds = %27
  %37 = load %struct.patch*, %struct.patch** %5, align 8
  %38 = getelementptr inbounds %struct.patch, %struct.patch* %37, i32 0, i32 4
  %39 = load i64, i64* %38, align 8
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %45

41:                                               ; preds = %36
  %42 = load %struct.apply_state*, %struct.apply_state** %4, align 8
  %43 = load %struct.patch*, %struct.patch** %5, align 8
  %44 = call i32 @add_conflicted_stages_file(%struct.apply_state* %42, %struct.patch* %43)
  store i32 %44, i32* %3, align 4
  br label %59

45:                                               ; preds = %36
  %46 = load %struct.apply_state*, %struct.apply_state** %4, align 8
  %47 = getelementptr inbounds %struct.apply_state, %struct.apply_state* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = icmp ne i64 %48, 0
  br i1 %49, label %50, label %57

50:                                               ; preds = %45
  %51 = load %struct.apply_state*, %struct.apply_state** %4, align 8
  %52 = load i8*, i8** %6, align 8
  %53 = load i32, i32* %7, align 4
  %54 = load i8*, i8** %9, align 8
  %55 = load i64, i64* %8, align 8
  %56 = call i32 @add_index_file(%struct.apply_state* %51, i8* %52, i32 %53, i8* %54, i64 %55)
  store i32 %56, i32* %3, align 4
  br label %59

57:                                               ; preds = %45
  br label %58

58:                                               ; preds = %57
  store i32 0, i32* %3, align 4
  br label %59

59:                                               ; preds = %58, %50, %41, %35
  %60 = load i32, i32* %3, align 4
  ret i32 %60
}

declare dso_local i64 @create_one_file(%struct.apply_state*, i8*, i32, i8*, i64) #1

declare dso_local i32 @add_conflicted_stages_file(%struct.apply_state*, %struct.patch*) #1

declare dso_local i32 @add_index_file(%struct.apply_state*, i8*, i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
